# glib

./: CMakeLists.txt  Makefile  install_script.py  win_conf.bat
extdeps/include/stb/: stb_truetype.h
install_scripts/: darwin_deps_arm64.txt  linux_deps_x86_64.txt  win_deps_arm64.txt  win_deps_x86_64.txt
resources/shaders/: base_shader.glsl  template.glsl  user.glsl
src/: Camera.cpp  CreateShape.cpp  Shader.cpp  TextureManager.cpp  TextureSlotManager.cpp  Texutre.cpp  Window.cpp  batch.cpp  camera.h  environment.h  glib.cpp  glib.h  graphicsUtils.h  main.cpp  shader.cpp  structs.h  textureManager.h  texutre.cpp  window.cpp
src/Fonts/: Font.cpp  Font.h  Language.cpp
src/OpenGLCore/: Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  ShaderCache.cpp  ShaderCache.h  glew.c
src/OpenGLCore/Buffer/: ElementBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexArrayLayout.h  VertexBuffer.cpp  VertexBuffer.h
src/OpenGLCore/Shader/: ShaderProgram.cpp  ShaderProgram.h  ShaderUtils.cpp  ShaderUtils.h
src/OpenGLCore/Texture/: Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
src/glib/: batch.h  camera.cpp  create_shape.cpp  environment.h  glib.cpp  texture_manager.cpp  texture_manager.h  texutre.cpp  window.cpp
src/glib/Base/: batch.h  camera.cpp  camera.h  create_shape.cpp  draw.cpp  draw.h  shader.cpp  shader.h  structs.h  texture.h  texture_manager.cpp  texture_manager.h  texutre.cpp  window.cpp  window.h
src/glib/Draw/: CMakeLists.txt  batch.cpp  camera.cpp  create_shape.cpp  draw.cpp  draw.h  shader.h  texture.h  texture_manager.cpp  texture_manager.h  texutre.cpp
src/glib/ECS/: CMakeLists.txt
src/glib/EntityAndComponents/: components.cpp  components.h  entity.h  entity.inl
src/glib/Fonts/: font.cpp  font.h  language.cpp
src/glib/Geometry/: mesh.cpp  mesh.h  text.h
src/glib/Logger/: CMakeLists.txt  logger.cpp
src/glib/OpenGLCore/: CMakeLists.txt  glew.c  logger.h  renderer.cpp  renderer.h  shader_cache.cpp  shader_cache.h
src/glib/OpenGLCore/Buffer/: element_buffer.cpp  element_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp
src/glib/OpenGLCore/Shader/: shader_program.cpp  shader_program.h  shader_utils.cpp  shader_utils.h
src/glib/OpenGLCore/Texture/: texture.cpp  texture.h  texture_array.cpp  texture_array.h
src/glib/Utils/: atlas.cpp  atlas.h  camera.cpp
